--- a/styles.css
+++ b/styles.css
@@ -5,13 +5,13 @@
 
 /* Define variáveis CSS para cores reutilizáveis */
 :root {
-    --braco-claro: #c7475104;
+    --laranja-claro: #FF862A;
     /* Cor laranja para destaque */
-    --alto-contraste-fundo: #02040ad0;
+    --alto-contraste-fundo: #000000;
     /* Cor de fundo para modo alto contraste */
-    --alto-contraste-texto: #250505;
+    --alto-contraste-texto: #ffffff;
     /* Cor de texto para modo alto contraste */
-    --alto-contraste-link: #00aeff;
+    --alto-contraste-link: #ffd700;
     /* Cor de links para modo alto contraste */
 }
 
@@ -22,7 +22,7 @@ body {
     font-family: 'Montserrat';
     /* Fonte principal */
     background: color(srgb 0.9 0.8 1);
-    /* Cor de fundo preto claro */
+    /* Cor de fundo lilás claro */
 }
 
 /* Estilos para títulos h2 */
@@ -81,15 +81,7 @@ h2 {
 
 /* Estilos para o modo alto contraste */
 .alto-contraste {
-    background-color: var(--alto-colidade */
-    .opcoes-acessibilidade {
-        margin-top: 10px;
-        /* Espaço acima */
-        display: flex;
-        /* Layout flexível */
-        flex-direction: column;
-        /* Organiza os itens verticalmente */
-    }ntraste-fundo);
+    background-color: var(--alto-contraste-fundo);
     /* Fundo preto */
     color: var(--alto-contraste-texto);
     /* Texto branco */
@@ -108,18 +100,18 @@ h2 {
 /* Estilo para links no modo alto contraste */
 .alto-contraste .nav-link {
     color: var(--alto-contraste-link);
-    /* vermelhpo*/
+    /* Cor dourada */
 }
 
 /* Estilos para a calculadora de IMC */
 #calculadora-imc {
-    background-color: #0e0c0c;
+    background-color: #fff;
     /* Fundo branco */
     padding: 2rem;
     /* Espaçamento interno */
-    border-radius: 15px;
+    border-radius: 10px;
     /* Bordas arredondadas */
-    box-shadow: 0px 4px 15px rgba(14, 12, 12, 0.795);
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1);
     /* Sombra suave */
 }
 
@@ -135,7 +127,7 @@ h2 {
 
 /* Estilização do formulário de IMC */
 #form-imc {
-    background-color: rgba(53, 49, 49, 0.9);
+    background-color: rgba(255, 255, 255, 0.9);
     /* Fundo branco semi-transparente */
     padding: 2rem;
     /* Espaçamento interno */
@@ -169,7 +161,7 @@ h2 {
 
 /* Efeito hover para o botão */
 #form-imc button:hover {
-    background-color: #cf1fe6;
+    background-color: #e6711f;
     /* Laranja mais escuro ao passar o mouse */
 }
 
