--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
 
 /* Define variáveis CSS para cores reutilizáveis */
 :root {
-    --laranja-claro: #2aff4e;
+    --laranja-claro: #2a2eff;
     /* Cor laranja para destaque */
     --alto-contraste-fundo: #000000;
     /* Cor de fundo para modo alto contraste */
